@@ -34,6 +34,8 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/peer_class.hpp"
 #include "libtorrent/peer_class_set.hpp"
 #include "libtorrent/peer_class_type_filter.hpp"
+#include "libtorrent/ip_filter.hpp"
+#include "libtorrent/session.hpp"
 
 using namespace libtorrent;
 
@@ -112,5 +114,39 @@ TORRENT_TEST(peer_class)
 	pool.decref(id1);
 	TEST_CHECK(pool.at(id2) == NULL);
 	TEST_CHECK(pool.at(id1) == NULL);
+}
+
+TORRENT_TEST(session_peer_class_filter)
+{
+	using namespace libtorrent;
+	session ses;
+	peer_class_t my_class = ses.create_peer_class("200.1.x.x IP range");
+
+	ip_filter f;
+	f.add_rule(address_v4::from_string("200.1.1.0")
+		, address_v4::from_string("200.1.255.255")
+		, 1 << my_class);
+	ses.set_peer_class_filter(f);
+
+#if TORRENT_USE_IPV6
+	TEST_CHECK(boost::get<0>(ses.get_peer_class_filter().export_filter())
+		== boost::get<0>(f.export_filter()));
+#else
+	TEST_CHECK(ses.get_peer_class_filter().export_filter() == f.export_filter());
+#endif
+}
+
+TORRENT_TEST(session_peer_class_type_filter)
+{
+	using namespace libtorrent;
+	session ses;
+	peer_class_t my_class = ses.create_peer_class("all utp sockets");
+
+	peer_class_type_filter f;
+	f.add(peer_class_type_filter::utp_socket, my_class);
+	f.disallow(peer_class_type_filter::utp_socket, session::global_peer_class_id);
+	ses.set_peer_class_type_filter(f);
+
+	TEST_CHECK(ses.get_peer_class_type_filter() == f);
 }
 
